# TurnItOn

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: 1.csv  2.csv  3.csv  4.csv  jk_map.pickle  jk_map_1.pickle  jk_map_2.pickle
notebooks/: maps.ipynb
turniton/: __main__.py  data.py  map.py  utils.py
