[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turniton"
version = "0.1.0"
description = "A Python project with pandas and geopandas dependencies."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "pandas",
    "geopandas",
    "matplotlib"
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
